[gd_scene load_steps=11 format=3 uid="uid://bw8klfkwmtc5v"]

[ext_resource type="Script" path="res://scripts/bomb.gd" id="1_eg6fj"]
[ext_resource type="Texture2D" uid="uid://bw6q81iuwasvv" path="res://sprites/bomb/bomb-explosion.png" id="2_80h43"]
[ext_resource type="Texture2D" uid="uid://ckthqw2k4es2y" path="res://sprites/bomb/bomb-idle.png" id="3_e4cc4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o1xnb"]
atlas = ExtResource("2_80h43")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyu6y"]
atlas = ExtResource("2_80h43")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x76dl"]
atlas = ExtResource("2_80h43")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt83j"]
atlas = ExtResource("2_80h43")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt1j2"]
atlas = ExtResource("2_80h43")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bubsi"]
animations = [{
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_o1xnb")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_fyu6y")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_x76dl")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_jt83j")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_xt1j2")
}],
"loop": true,
"name": &"burning",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_e4cc4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g646d"]
radius = 12.0

[node name="Bomb" type="Area2D" groups=["bombs"]]
collision_layer = 32
collision_mask = 16
script = ExtResource("1_eg6fj")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_bubsi")
animation = &"burning"
offset = Vector2(0.199999, -0.600001)

[node name="LightUpTimer" type="Timer" parent="."]
one_shot = true

[node name="FuseTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_g646d")

[connection signal="timeout" from="LightUpTimer" to="." method="_on_light_up_timer_timeout"]
[connection signal="timeout" from="FuseTimer" to="." method="_on_fuse_timer_timeout"]
